--- a/index.html
+++ b/index.html
@@ -8,28 +8,21 @@
   #messages li { padding: 5px 10px; }
   #messages li:nth-child(odd) { background: #eee; }
 </style>
-
+<div class=chat page>
 <ul id="messages"></ul>
 
 <form action="">
   <input id="m" autocomplete="off" /><button>Send</button>
 </form>
+</div>
+<div class="login page">
+        <div class="form">
+        <h3 class="title">昵称</h3>
+        <input class="usernameInput" type="text" maxlength="14" />   
+        <input id="man" type="radio" checked="checked" name="1" />男<input id="woman" type="radio"  name="1"/>女
+ </div>
+</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+<script src="clientmain.js"></script>
 
-<script>
-  $(() => {
-    var socket = io()
-
-    $('form').submit(() => {
-      socket.emit('chat message', $('#m').val())
-      $('#m').val('')
-
-      return false
-    })
-
-    socket.on('chat message', msg => {
-      $('#messages').append($('<li>').text(msg))
-    })
-  })
-</script>
