--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   #messages li { padding: 5px 10px; }
   #messages li:nth-child(odd) { background: #eee; }
 </style>
-<div class=chat page>
+<div class="chat page">
 <ul id="messages"></ul>
 
 <form action="">
