--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   #messages li { padding: 5px 10px; }
   #messages li:nth-child(odd) { background: #eee; }
 </style>
+<link rel="stylesheet" href="style.css">
 <div class="chat page">
 <ul id="messages"></ul>
 
@@ -17,9 +18,11 @@
 </div>
 <div class="login page">
         <div class="form">
+        <input id="man" type="radio"  name="1" value="male"/><h4 class="title">男</h4><input class="title" id="woman" type="radio"  name="1" value="female" /><h4 class="title">女</h4>
+        <br/> 
         <h3 class="title">昵称</h3>
+
         <input class="usernameInput" type="text" maxlength="14" />   
-        <input id="man" type="radio" checked="checked" name="1" />男<input id="woman" type="radio"  name="1"/>女
  </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
