分离登录与聊天页面

--- a/index.html
+++ b/index.html
@@ -9,13 +9,6 @@
   #messages li:nth-child(odd) { background: #eee; }
 </style>
 <link rel="stylesheet" href="style.css">
-<div class="chat page">
-<ul id="messages"></ul>
-
-<form action="">
-  <input id="m" autocomplete="off" /><button>Send</button>
-</form>
-</div>
 <div class="login page">
         <div class="form">
         <input id="man" type="radio"  name="1" value="male"/><h4 class="title">男</h4><input class="title" id="woman" type="radio"  name="1" value="female" /><h4 class="title">女</h4>
@@ -25,7 +18,9 @@
         <input class="usernameInput" type="text" maxlength="14" />   
  </div>
 </div>
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-<script src="clientmain.js"></script>
+<script src="clientmain_pre.js"></script>
 
