--- a/chat.html
+++ b/chat.html
@@ -9,7 +9,12 @@
 <ul id="messages"></ul>
 
 <form action="">
-  <input id="m" autocomplete="off" /><button class="btn">Send</button>
+	<input id="m" autocomplete="off" /><button class="btn">发送</button>
+	<form action="#">
+          </br>		          <label>
+				          <input type="checkbox" id="pubchange"/>
+					          <span>切换到公共聊天</span>
+						        </label>
 </form>
 
 </div>
@@ -20,16 +25,18 @@
     <i class="large material-icons">close</i>
   </a>
   <ul>
-    <li><a class="btn-floating red"><i class="material-icons">youtube_searched_for</i></a></li>
-    <li><a class="btn-floating yellow darken-1"><i class="material-icons">power_settings_new</i></a></li>
+    <li><a class="btn-floating red tooltipped" data-position="bottom" data-tooltip="换人"><i class="material-icons">youtube_searched_for</i></a></li>
+    <li><a class="btn-floating yellow darken-1 tooltipped" data-position="bottom" data-tooltip="关闭刷新"><i class="material-icons">power_settings_new</i></a></li>
   </ul>
 </div>
 <script>
 document.addEventListener('DOMContentLoaded', function() {
-    var elems = document.querySelectorAll('.fixed-action-btn');
-    var instances = M.FloatingActionButton.init(elems, {
+    var floatelems = document.querySelectorAll('.fixed-action-btn');
+    var floatinstances = M.FloatingActionButton.init(floatelems, {
       direction: 'left'
     });
+    var tooltipelems = document.querySelectorAll('.tooltipped');
+    var tooltipinstances = M.Tooltip.init(tooltipelems, {});
   });
 </script>
 <!-- Compiled and minified CSS -->
