--- a/chat.html
+++ b/chat.html
@@ -19,6 +19,18 @@
 
 </div>
 
+<div id="waitanimation" class="preloader-wrapper active">
+    <div class="spinner-layer spinner-red-only">
+      <div class="circle-clipper left">
+        <div class="circle"></div>
+      </div><div class="gap-patch">
+        <div class="circle"></div>
+      </div><div class="circle-clipper right">
+        <div class="circle"></div>
+      </div>
+    </div>
+</div>
+
 
 <div class="fixed-action-btn" id="plusbutton">
   <a class="btn-floating btn-large red">
