--- a/chat.html
+++ b/chat.html
@@ -37,8 +37,8 @@
     <i class="large material-icons">close</i>
   </a>
   <ul>
-    <li><a class="btn-floating red tooltipped" data-position="bottom" data-tooltip="换人"><i class="material-icons">youtube_searched_for</i></a></li>
-    <li><a class="btn-floating yellow darken-1 tooltipped" data-position="bottom" data-tooltip="关闭刷新"><i class="material-icons">power_settings_new</i></a></li>
+    <li><button class="btn-floating red tooltipped" id="changehuman" data-position="bottom" data-tooltip="换人"><i class="material-icons">youtube_searched_for</i></button></li>
+    <li><a class="btn-floating yellow darken-1 tooltipped" id="quitrefresh" data-position="bottom" data-tooltip="关闭刷新"><i class="material-icons">power_settings_new</i></a></li>
   </ul>
 </div>
 <script>
