--- a/chat.html
+++ b/chat.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>陌生人聊天</title>
+  <meta charset="utf-8">
 <style>
   div.row div#waitanimation { padding: 1px;position: fixed; top: 0 ;left: 2}
   form { padding: 10px; width:100%;position: fixed; bottom: 0;}
